<resources>
    <string name="app_name">CarZone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_text1">welcome to CarZone</string>
    <string name="welcome_text2">The trusted community of car buyers and sellers</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="term_text1">If you continue, you are accepting</string>
    <string name="term_text2">CarZone Terms and Condition and Privacy Policy</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email\n</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_header_text1">Hello there!</string>
    <string name="login_header_text2">Login to your account</string>
    <string name="register_header_text1">Create your account!</string>
    <string name="register_header_text2">Already have an account?</string>
    <string name="username">Username\n</string>
    <string name="sign_up">Sign Up</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="category_name">category name</string>
    <string name="currency">EGP</string>
    <string name="car_name">car name</string>
    <string name="_7_may">7 may</string>
    <string name="location">cairo</string>
    <string name="price">500000</string>
    <string name="negotiable">Negotiable</string>
    <string name="not_negotiable"> Not Negotiable</string>
    <string name="user_name">User Name</string>
    <string name="profile_sub_title">View and edit profile</string>
    <string name="carzone_wallet">CarZone Wallet</string>
    <string name="balance">Balance:</string>
    <string name="account_item_title1">Buy Discount Packages</string>
    <string name="account_item_title2">Order and Billing Info</string>
    <string name="account_item_title3">Settings</string>
    <string name="account_item_title4">Help and Support</string>
    <string name="account_item_title5">Language</string>
    <string name="account_item_subtitle1">Sell faster, more and at higher"\n" margins with packages</string>
    <string name="account_item_subtitle2">Order, billing and invoices</string>
    <string name="account_item_subtitle3">Privacy and mange account</string>
    <string name="account_item_subtitle4">Help center and legal terms</string>
    <string name="account_item_subtitle5"> </string>
    <string name="sell_faster_more_and_at_higher_margins_with_packages">Sell faster, more and at higher margins with packages</string>
    <string name="user_balance">0</string>
    <string name="search_message">Search Message…</string>
    <string name="time">00:00</string>
    <string name="message">this is message</string>

    //Validation
    <string name="password_empty">Please, enter your password</string>
    <string name="min_password">Password should include 1Capital letter, 1 Number, and min 8 character, special character are not allowed</string>
    <string name="password_no_spec_characters">Special characters are not allowed</string>
    <string name="one_num_needed">One Number Needed at Least</string>
    <string name="cap_letter">One Capital letter Needed At Least</string>
    <string name="phone_number">Phone Number</string>

    //onBoarding
    <string name="on_boarding_title_1">Discover Endless Possibilities</string>
    <string name="on_boarding_title_2">Seamless Buying Experience</string>
    <string name="on_boarding_title_3">Sell with Confidence</string>
    <string name="on_boarding_title_4">Rent with Ease</string>
    <string name="on_boarding_description_1">Explore a vast collection of vehicles available for buying, selling, and renting on CarZone</string>
    <string name="on_boarding_description_2">With CarZone, purchasing your dream vehicle is a breeze. Browse detailed listings, compare prices, and connect directly with sellers to negotiate the best deal. </string>
    <string name="on_boarding_description_3">Ready to part ways with your current wheels? CarZone provides a trusted platform to sell your vehicle quickly and effortlessly.</string>
    <string name="on_boarding_description_4">Need a temporary set of wheels? CarZone offers a convenient rental service, allowing you to find the perfect vehicle for your needs.</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="sell">Sell</string>
    <string name="my_ads">My Ads</string>
    <string name="account">Account</string>
    <string name="remember_me">Remember me</string>
    <string name="upload_up_to_7_photos">UPLOAD UP TO 7 PHOTOS</string>
    <string name="add_images">Add Images</string>
    <string name="include_some_details">Include some details</string>
    <string name="price2">Price *</string>
    <string name="location2">Location *</string>
    <string name="describe_what_are_you_selling">Describe what are you selling *</string>
    <string name="last_seen">online</string>
    <string name="success_message">success_message</string>
    <string name="error_message">error_message\n</string>
    <string name="continue_with_phone_number">Continue With Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="phone_number_auth">Phone Number Authentication</string>
    <string name="_continue">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="let_s_go">Let\'s Go</string>
    <string name="choose">choose</string>
    <string name="add_title">Add Title *</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_engine">Vehicle Engine</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="model">Model</string>
    <string name="seating_capacity">Seating Capacity</string>
    <string name="mileage">Mileage</string>
    <string name="cargo_capacity">Cargo Capacity</string>
    <string name="transmission">Transmission</string>
    <string name="engine_power">Engine Power</string>
    <string name="engine_torque">Engine Torque</string>
    <string name="kerb_weight">Kerb Weight</string>
    <string name="weight">Weight</string>
    <string name="see_all">see all</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="region_name">region name</string>
    <string name="ad_images">ad image</string>
    <string name="favorite">favorite</string>
    <string name="share">share</string>
    <string name="location_icon">location icon</string>
    <string name="details">Details</string>
    <string name="brand">Brand:</string>
    <string name="model_txt">Model:</string>
    <string name="year">Year:</string>
    <string name="kilometers">Kilometers:</string>
    <string name="fuel_type_txt">Fuel Type:</string>
    <string name="engine">Engine:</string>
    <string name="seating_capacity_text">Seating Capacity:</string>
    <string name="egp">EGP</string>
    <string name="cargo_capacity_text">Cargo Capacity:</string>
    <string name="engine_power_txt">Engine Power:</string>
    <string name="engineTorque">Engine Torque:</string>
    <string name="kerbWeight">Kerb Weight:</string>
    <string name="transmission_txt">Transmission:</string>
    <string name="description">Description</string>
    <string name="weight_txt">Weight:</string>
    <string name="see_profile"><![CDATA[See Profile >]]></string>
    <string name="location3">Location</string>
    <string name="see_location">See location</string>
    <string name="hide_this_ad">hide this ad</string>
    <string name="report_this_ad">Report this ad</string>
    <string name="your_safety_matters_to_us">Your safety matters to us!</string>
    <string name="never_go_alone_to_meet_a_buyer_seller_always_take_someone_with_you">* Never go alone to meet a buyer / seller, always take someone with you</string>
    <string name="only_meet_in_public_crowded_places">* Only meet in public / crowded places.</string>
    <string name="check_and_inspect_the_product_properly_before_purchasing_it">* Check and inspect the product properly before purchasing it.</string>
    <string name="never_pay_anything_in_advance_or_transfer_money_before_inspecting_the_proudct">* Never pay anything in advance or transfer money before inspecting the proudct.</string>
    <string name="related_ads">Related ads</string>
    <string name="sms">SMS</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="map_img">map img</string>
    <string name="seller_name">Seller Name</string>
    <string name="joined">Joined</string>
    <string name="filters">Filters</string>
    <string name="you_don_t_have_ads_with_current_filters">You don\'t have ads with current filters</string>
    <string name="all_ads">All Ads</string>
    <string name="fav_icon" translatable="false">fav icon</string>
    <string name="delete_icon" translatable="false">delete icon</string>
    <string name="ads_type">Ad Type</string>
    <string name="ic_attachment" translatable="false">ic_attachment</string>
    <string name="send_message">Message…</string>
    <string name="audio_btn" translatable="false">audio_btn</string>
    <string name="video_btn" translatable="false">video_btn</string>
    <string name="back_btn" translatable="false">back_btn</string>
    <string name="seen_img" translatable="false">seen_img</string>
    <string name="receiver_message">Receiver Message</string>
    <string name="sender_message">sender Message</string>
    <string name="use_current_location">Use current location</string>
    <string name="choose_region">Choose region</string>
    <string name="egypt">Egypt</string>
    <string name="see_all_in">see all in </string>
    <string name="search_area_city_or_country">search area, city or country</string>
    <string name="right_arrow">right_arrow</string>
    <string name="no_saved_item_available">No saved items available</string>
    <string name="saved_items">Saved Items</string>
    <string name="saved_item_img">saved_item_img</string>
    <string name="account_item_icon">account_item_icon</string>
    <string name="account_item_icon2">account_item_icon2</string>
    <string name="card_img">card_img</string>
    <string name="info">info</string>
    <string name="dropdown_icon" translatable="false">dropdown_icon</string>
    <string name="notification_icon" translatable="false">notification_icon</string>
    <string name="phone_login_img" translatable="false">phone_login_img</string>
    <string name="please_enter_your_phone_number">Please Enter your phone number</string>
    <string name="on_boarding_iv" translatable="false">on_boarding_iv</string>
    <string name="otp_img" translatable="false">otp_img</string>
    <string name="category">Category *</string>
    <string name="phone">Phone</string>
    <string name="my_friend_you_are_stupid_you_will_send_a_message_to_yourself">My friend, you are stupid. You will send a message to yourself</string>
    <string name="joined_at">JoinedAt: </string>


</resources>