<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Material3.CardView.Elevated"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_7sdp"
    android:backgroundTint="@color/appModeBG"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/appModeBG"
        >

        <ImageView
            android:id="@+id/ad_img"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_100sdp"
            android:scaleType="fitXY"
            android:src="@drawable/car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/ad_images" />

        <TextView
            android:id="@+id/currency_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/currency"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:padding="@dimen/_3sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ad_img" />
        <TextView
            android:id="@+id/ad_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:padding="@dimen/_3sdp"

            android:text="@string/price"
            app:layout_constraintStart_toEndOf="@+id/currency_tv"
            app:layout_constraintTop_toBottomOf="@id/ad_img" />

        <TextView
            android:id="@+id/ad_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/car_name"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:padding="@dimen/_3sdp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ad_price"
            />

        <ImageView
            android:id="@+id/save_icon"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:src="@drawable/bookmark"
            android:padding="@dimen/_3sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ad_img"
            android:contentDescription="@string/fav_icon" />




        <TextView
            android:id="@+id/negotiable_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_10ssp"
            android:padding="@dimen/_3sdp"

            android:text="@string/negotiable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ad_name"
            />

        <TextView
            android:id="@+id/seller_location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/location"
            android:padding="@dimen/_3sdp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/negotiable_tv" />

        <TextView
            android:id="@+id/listed_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/_7_may"
            android:padding="@dimen/_3sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seller_location_tv"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

