<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Material3.CardView.Elevated"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_5sdp"
    android:backgroundTint="@color/appModeBG"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/appModeBG"
        >
        <ImageView
            android:id="@+id/car_img"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_150sdp"
            android:scaleType="fitXY"
            android:src="@drawable/car"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/ad_images" />

        <TextView
            android:id="@+id/car_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/car_name"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:fontFamily="@font/raleway_bold"
            app:layout_constraintStart_toEndOf="@+id/car_img"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/delete_icon" />

        <TextView
            android:id="@+id/currency_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/currency"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/raleway_bold"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/car_img"
            app:layout_constraintTop_toBottomOf="@id/car_name" />

        <TextView
            android:id="@+id/car_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:text="@string/price"
            android:fontFamily="@font/raleway_bold"
            app:layout_constraintStart_toEndOf="@+id/currency_tv"
            app:layout_constraintTop_toBottomOf="@id/car_name" />

        <TextView
            android:id="@+id/negotiable_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_8ssp"
            android:text="@string/negotiable"
            android:fontFamily="@font/raleway_medium"
            app:layout_constraintStart_toEndOf="@id/car_img"
            app:layout_constraintTop_toBottomOf="@+id/car_price" />

        <TextView
            android:id="@+id/seller_location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_10ssp"
            android:text="@string/location"
            android:fontFamily="@font/raleway_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/car_img" />

        <TextView
            android:id="@+id/listed_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/_7_may"
            android:fontFamily="@font/raleway_medium"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_15sdp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

