<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth.StartFragment"
    android:background="@color/appModeBG"
    >
    <ImageView
        android:id="@+id/cancel_button"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/cancel"
        android:backgroundTint="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cancel"
        app:tint="@color/text_color" />
    <TextView
        android:id="@+id/welcome_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:text="@string/welcome_text1"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancel_button" />
    <TextView
        android:id="@+id/welcome_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_text2"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_16ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_with_google_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:drawableLeft="@drawable/google"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_14ssp"
        android:text="@string/continue_with_google"
        android:textColor="@color/button_text_color"
        android:textStyle="bold"
        app:strokeColor="@color/button_corner_color"
        app:strokeWidth="@dimen/_1sdp"
        app:cornerRadius="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_with_email_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:drawableLeft="@drawable/email"
        android:padding="@dimen/_10sdp"
        android:text="@string/continue_with_email"
        android:textColor="@color/button_text_color"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        app:strokeColor="@color/button_corner_color"
        app:strokeWidth="@dimen/_1sdp"
        app:cornerRadius="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_with_google_btn" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_with_phone_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:drawableLeft="@drawable/phone_icon"
        android:padding="@dimen/_10sdp"
        android:text="@string/continue_with_phone_number"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_with_email_btn"
        app:strokeColor="@color/button_corner_color"
        app:strokeWidth="@dimen/_1sdp" />
    <TextView
        android:id="@+id/term_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/term_text1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/term_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/term_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/term_text2"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>