<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.home.AccountFragment"
    android:backgroundTint="@color/appModeBG2"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="@dimen/_96sdp"
        android:layout_height="@dimen/_96sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/avatar_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/user_name"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toEndOf="@+id/profile_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/profile_sub_title"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toEndOf="@id/profile_img"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/wallet_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_img">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/card_img"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_45sdp"
                android:contentDescription="@string/card_img"
                android:src="@drawable/credit_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/carZoneWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_img"
                android:text="@string/carzone_wallet"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/card_img"
                app:layout_constraintTop_toBottomOf="@id/carZoneWallet"
                android:text="@string/balance"
                android:fontFamily="@font/raleway_medium"
                android:layout_marginTop="@dimen/_3sdp"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color"

                />

            <TextView
                android:id="@+id/balance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/balance"
                app:layout_constraintTop_toBottomOf="@id/carZoneWallet"
                android:text="@string/user_balance"
                android:layout_marginTop="@dimen/_3sdp"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_3sdp" />

            <TextView
                android:id="@+id/currency_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/balance_tv"
                app:layout_constraintTop_toBottomOf="@id/carZoneWallet"
                android:text="@string/currency"
                android:fontFamily="@font/raleway_medium"
                android:layout_marginTop="@dimen/_3sdp"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color"
                android:layout_marginStart="@dimen/_3sdp" />
            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/info"
                android:layout_margin="@dimen/_15sdp"
                android:contentDescription="@string/info" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/saved_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallet_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/saved_item_img"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/saved_item_img"
                android:src="@drawable/bookmark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saved_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/saved_item_img"
                android:text="@string/saved_items"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/text_color"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/account_item_rv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/saved_card"
    tools:listitem="@layout/account_item"
    android:layout_margin="@dimen/_15sdp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>